# imm

./: .clang-format  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO.txt  abc.c  abc.h  abc_lprob.c  abc_lprob.h  amino.c  amino.h  amino_lprob.c  amino_lprob.h  array_size_field.h  assume.h  benchmark_msv.c  bitmap.c  bitmap.h  bits.h  btrans.c  btrans.h  cartes.c  cartes.h  cell.h  clock.c  code.c  code.h  codon.c  codon.h  codon_lprob.c  codon_lprob.h  codon_marg.c  codon_marg.h  codon_state.c  codon_state.h  cof.h  (+253 more)
.github/workflows/: cmake.yml  deploy.yml  test.yml
cmake/: GetIMMVersion.cmake  GetNHMMVersion.cmake  IMMConfig.cmake.in  imm-config.cmake.in  imm.cmake
cwpack/: cwpack_utils.c  cwpack_utils.h
file-format/: README.md  description.txt  imm.ksy
fuzz/: CMakeLists.txt  abc_fuzz.c  abc_fuzz.dict  abc_seed.c  dp_fuzz.c  dp_fuzz.dict  dp_seed.c  model_frame.h  model_normal.c  model_normal.h
include/: CMakeLists.txt  imm.h  nhmm.h
include/imm/: abc.h  abc_lprob.h  abc_table.h  abc_types.h  abct.h  alphabet.h  amino.h  amino_lprob.h  api.h  arr3d.h  array.h  bitmap.h  btrans.h  bug.h  cartes.h  cco.h  cell.h  code.h  codon.h  codon_lprob.h  codon_marg.h  codon_state.h  cof.h  compiler.h  config.h.in  dna.h  dp.h  dp_args.h  dp_task.h  emis.h  error.h  eseq.h  example1.h  example2.h  file.h  float.h  frame_epsilon.h  frame_state.h  gc.h  generics.h  (+55 more)
include/imm/dp/: code.h  emis.h  trans_table.h
include/nhmm/: alphabet.h  api.h  codon.h  hmm.h  path.h  state.h
itest/: CMakeLists.txt  runimm.c
perf/: CMakeLists.txt  PERF.md  perf  show-perf
perf/14-01-2021/: perf.csv
perf/dump/02-02-2021/: perf.csv
perf/dump/15-01-2021/: perf.csv
perf/dump/18-01-2021/: perf.csv
perf/dump/19-01-2021/: perf.csv
perf/dump/26-01-2021/: perf.csv
perf/src/: 1thread_viterbi.c  multi_thread_viterbi.c  stats.h
script/: update_gc.py
src/: abc.c  abc.h  abc_lprob.c  abc_table.c  abc_types.c  abct.c  alphabet.c  alphabet.h  amino.c  amino.h  arr3d.c  array.c  array.h  ascii.c  ascii.h  assume.h  best_trans.c  best_trans.h  bitarr.h  bitmap.c  bitmap.h  bits.h  bug.c  bug.h  cartes.c  cartes.h  cast.h  code.c  code.h  code2.c  code2.h  codon.c  codon_iter.h  codon_lprob.c  codon_marg.c  codon_state.c  compact_dp.h  compiler.h  counter.c  counter.h  (+235 more)
src/common/: bits.h  bug.c  bug.h  common.h  compiler.h  error.c  error.h  io.h  log.h  math.h  memory.h  string.h
src/dp/: args.h  assume.h  best_trans.c  best_trans.h  best_trans_score.c  best_trans_score.h  bitarr.c  bitarr.h  code.c  code.h  dp.c  dp.h  emis.c  emis.h  emission.c  emission.h  eseq.c  eseq.h  final_score.c  final_score.h  hot_range.c  hot_range.h  imm_dp.h  io.c  matrix.c  matrix.h  minmax.h  path.c  path.h  premise.h  ranges.c  ranges.h  seq_code.c  seq_code.h  set_score.h  span.h  state_loc.h  state_range.h  state_table.c  state_table.h  (+14 more)
src/dp_draft/: emission.c  emission.h  graph.c  matrix.h  model.c  model.h  step.h  trans_table.c  trans_table.h
src/imm/: abc.c  abc.h  abc_lprob.h  abc_types.h  amino.h  amino_lprob.h  ascii.c  ascii.h  bug.h  cartes.h  code.h  codon.h  codon_lprob.h  codon_marg.h  counter.c  counter.h  dna.h  dp.c  dp.h  example1.h  frame_cond.h  frame_epsilon.h  frame_state.h  gc.h  gmatrix.h  hide.h  hmm.c  hmm.h  imm.h  log.c  log.h  lprob.c  math.c  matrix.c  matrix.h  matrix_ptr.c  matrix_ptr.h  mm_state.c  mm_state.h  mm_state_sort.c  (+32 more)
src/imm/dp/: emis.h  state_table.h
src/linux/: list.h
src/logaddexp/: README.md
src/matrix/: make_matrix.h  matrix.h
src/rapidstring/: README.md  rapidstring.h
src/state/: frame.c  frame.h  normal.c  normal.h  silent.c  silent.h  state.c  state.h  table.c  table.h
src/std/: array.h  bits.h  bug.c  bug.h  compiler.h  const.h  error.c  error.h  io.c  io.h  math.c  math.h  memory.c  memory.h
src/util/: array.h  bits.h  bug.c  bug.h  compiler.h  const.h  math.c  math.h
test/: CMakeLists.txt  abc.c  abc_fuzzer.c  abc_io.c  abc_lprob.c  alphabet.c  amino.c  amino_io.c  amino_lprob.c  codon.c  codon_lprob.c  codon_marg.c  codon_state.c  cwpack_stream_context.h  dna_io.c  dp.c  dp_dot.c  dp_io.c  frame_state.c  frame_state_24.c  frame_state_joint.c  gc.c  hmm.c  hmm_dot.c  hmm_frame.c  hmm_io.c  hmm_likelihood.c  hmm_loglik.c  hmm_viterbi.c  hope.h  large_frame.c  large_models.c  large_normal.c  log.c  model.c  model.h  model_frame.c  msv.c  msv_long.c  msv_short.c  (+10 more)
test/cass/: cass.h
test/src/: abc.c  abc_lprob.c  abc_table.c  dp2_emission.c  elapsed.h  eseq.c  helper.h  hmm.c  hmm_io.c  hmm_likelihood.c  hmm_viterbi.c  model1.c  model1.h  model2.c  model2.h  parallel.c  path.c  perf.c  seq_code.c  seq_table.c  sequence_table.c  state.c  thread.h  window.c  window_viterbi.c
test/unity/: README.md
