add_custom_target(all_tests)
find_package(hope REQUIRED)

function(imm_add_test name srcs)
    add_executable(${name} ${srcs})
    add_dependencies(all_tests ${name})
    target_link_libraries(${name} PRIVATE IMM::imm)
    target_link_libraries(${name} PUBLIC HOPE::hope)
    target_compile_options(${name} PRIVATE ${WARNING_FLAGS})
    target_compile_features(${name} PRIVATE c_std_11)
    add_test(NAME ${name} COMMAND ${name})

    set(TMPDIR "${CMAKE_CURRENT_BINARY_DIR}/${name}.tmp")
    add_custom_command(TARGET ${name} PRE_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory ${TMPDIR}
    )
    target_compile_definitions(${name} PUBLIC "TMPDIR=\"${TMPDIR}\"")
endfunction()

imm_add_test(abc abc.c)
imm_add_test(abc_io abc_io.c)
imm_add_test(amino amino.c)
imm_add_test(amino_io amino_io.c)
imm_add_test(dna_io dna_io.c)
imm_add_test(rna_io rna_io.c)
imm_add_test(abc_lprob abc_lprob.c)
imm_add_test(amino_lprob amino_lprob.c)
imm_add_test(state state.c)
imm_add_test(path path.c)
imm_add_test(hmm hmm.c)
imm_add_test(dp dp.c)
imm_add_test(dp_io "dp_io.c;model_normal.c;model_frame.c")
imm_add_test(large_normal "large_normal.c;model_normal.c")
imm_add_test(large_frame "large_frame.c;model_frame.c")
imm_add_test(viterbi viterbi.c)
imm_add_test(hmm_loglik hmm_loglik.c)
imm_add_test(hmm_frame hmm_frame.c)
imm_add_test(codon_lprob codon_lprob.c)
imm_add_test(codon_marg codon_marg.c)
imm_add_test(codon_state codon_state.c)
imm_add_test(frame_state frame_state.c)
