find_package(hope REQUIRED)
find_package(log REQUIRED)

function(imm_add_test name)
    add_executable(${name} ${name}.c)
    target_link_libraries(${name} PRIVATE IMM::imm)
    target_link_libraries(${name} PRIVATE HOPE::hope)
    target_link_libraries(${name} PRIVATE LOG::log)
    target_compile_options(${name} PRIVATE ${WARNING_FLAGS})
    target_compile_features(${name} PRIVATE c_std_11)
    add_test(NAME ${name} COMMAND ${name})

    set(TMPDIR "${CMAKE_CURRENT_BINARY_DIR}/${name}.tmp")
    add_custom_command(
        TARGET ${name}
        PRE_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory ${TMPDIR})
    target_compile_definitions(${name} PUBLIC "TMPDIR=\"${TMPDIR}\"")
endfunction()

imm_add_test(abc)
imm_add_test(abc_io)
imm_add_test(abc_lprob)
imm_add_test(amino)
imm_add_test(amino_io)
imm_add_test(amino_lprob)
imm_add_test(codon_lprob)
imm_add_test(codon_marg)
imm_add_test(codon_state)
imm_add_test(dna_io)
imm_add_test(dp)
imm_add_test(dp_dot)
imm_add_test(dp_io)
imm_add_test(frame_state)
imm_add_test(gc)
imm_add_test(hmm)
imm_add_test(hmm_dot)
imm_add_test(hmm_frame)
imm_add_test(hmm_loglik)
imm_add_test(large_models)
imm_add_test(log)
imm_add_test(path)
imm_add_test(rna_io)
imm_add_test(rnd)
imm_add_test(state)
imm_add_test(viterbi)
